--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"nodemon app.js",
-    "start":"nodemone app.js"
+    "dev": "nodemon app.js",
+    "start": "nodemone app.js"
   },
   "repository": {
     "type": "git",
@@ -17,5 +17,18 @@
   "bugs": {
     "url": "https://github.com/kaplandavid992/news-explorer-api/issues"
   },
-  "homepage": "https://github.com/kaplandavid992/news-explorer-api#readme"
+  "homepage": "https://github.com/kaplandavid992/news-explorer-api#readme",
+  "dependencies": {
+    "body-parser": "^1.20.0",
+    "celebrate": "^15.0.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "express-rate-limit": "^6.4.0",
+    "express-winston": "^4.2.0",
+    "helmet": "^5.1.0",
+    "joi": "^17.6.0",
+    "mongoose": "^6.4.3",
+    "validator": "^13.7.0",
+    "winston": "^3.8.1"
+  }
 }
