--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app.js",
-    "start": "nodemone app.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,7 @@
     "helmet": "^5.1.0",
     "joi": "^17.6.0",
     "mongoose": "^6.4.3",
+    "nodemon": "^2.0.19",
     "validator": "^13.7.0",
     "winston": "^3.8.1"
   }
