--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
   },
   "homepage": "https://github.com/kaplandavid992/news-explorer-api#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "celebrate": "^15.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-rate-limit": "^6.4.0",
     "express-winston": "^4.2.0",
     "helmet": "^5.1.0",
     "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.3",
     "nodemon": "^2.0.19",
     "validator": "^13.7.0",
